k8s/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: my-namespace
spec:
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  selector:
    app: frontend
  type: ClusterIP
